# lingcode

./: .gitignore  .prettierignore  CHINA_OPTIMIZATION_SUMMARY.md  CLAUDE.md  NETWORK_ACCESS_AUDIT.md  PROCESSING_STATE_IMPROVEMENT.md  PYTHON_BUNDLE_IMPLEMENTATION.md  PYTHON_BUNDLE_PLAN.md  README.md  RECORDING_FIX_SUMMARY.md  commitlint.config.js  eslint.config.js  index.html  package.json  pnpm-lock.yaml  recording-float.html  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json
docs/: CONTRIBUTING.md  architecture.md  development.md
openspec/: project.md
scripts/: prepare-python-bundle.sh
src/: App.test.tsx  App.tsx  ComponentsDemo.tsx  index.css  main.tsx  recording-float.tsx
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/docs/: PYTHON_DEPENDENCIES.md
src-tauri/icons/: README.md  icon.icns
src-tauri/scripts/: funasr_server.py  funasr_transcribe.py
src-tauri/src/: accessibility.rs  app_tracker.rs  config.rs  lib.rs  main.rs  shortcut.rs  tray.rs
src-tauri/src/audio/: mod.rs  permission.rs  recorder.rs  types.rs
src-tauri/src/commands/: accessibility.rs  audio.rs  db.rs  debug.rs  funasr.rs  mod.rs  model.rs  system.rs  transcription.rs  window.rs
src-tauri/src/db/: mod.rs  models.rs  repository.rs  schema.rs
src-tauri/src/funasr/: engine.rs  mod.rs  prewarmer.rs  server.rs
src-tauri/src/python/: bundled.rs  installer.rs  mod.rs
src-tauri/src/whisper/: engine.rs  mod.rs  preprocessor.rs
src/components/: Button.test.tsx  (+11 more)
(+69 files in other folders)
