[package]
name = "lingcode"
version = "0.1.0"
description = "跨应用语音听写工具，专注于中文场景的本地语音转文字"
authors = ["Lingcode Team"]
edition = "2021"

[lib]
name = "lingcode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.2", features = ["macos-private-api", "tray-icon", "protocol-asset"] }
tauri-plugin-shell = "2.0"
tauri-plugin-global-shortcut = "2.0"
tauri-plugin-clipboard-manager = "2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Audio capture
cpal = "0.16"
hound = "3.5"

# Concurrency
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for model downloads
reqwest = { version = "0.12", features = ["stream"] }
futures-util = "0.3"

# Whisper speech-to-text
whisper-rs = { version = "0.15", features = [] }
num_cpus = "1.16"
once_cell = "1.19"
tauri-plugin-macos-permissions = "2.3.0"

# Platform-specific
[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9"
cocoa = "0.25"
objc = "0.2"
libloading = "0.8"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-cli = "2.0"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
